<resources>
    <string name="app_name">Assignment3</string>
<!--    <string name="action_sort">Sort</string>-->
<!--    <string name="action_view">Change View</string>-->
    <string name="ab_title_home">HOME</string>
    <string name="btn_add_student">ADD STUDENT</string>
    <string name="tv_textviewFragment_text">No student has been added yet.</string>
    <string name="all_btn_view">view</string>
    <string name="all_btn_edit">edit</string>
    <string name="all_btn_delete">delete</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_roll">Sort by Roll No.</string>
    <string name="all_btn_add">Add Student</string>
    <string name="all_edittext_class">Class</string>
    <string name="all_edittext_rollno">Roll No</string>
    <string name="all_edittext_name">Student Name</string>
    <string name="update">update</string>
    <string name="ab_title_update">Update </string>
    <string name="all_btn_submit">submit</string>
</resources>