<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/alert_dialog"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    >
    <Button
        android:id="@+id/btn_alert_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:text="@string/all_btn_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/all_button_shape"
        />
    <Button
        android:id="@+id/btn_alert_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_button_shape"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_alert_view"
        android:text="@string/all_btn_edit"
        />
    <Button
        android:id="@+id/btn_alert_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_button_shape"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green"
        android:layout_below="@id/btn_alert_edit"
        android:text="@string/all_btn_delete"
        />
</RelativeLayout>